--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "npm": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dropdown-menu": "^2.0.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-select-dropdown": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
