--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.72.4",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-modal": "^13.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
