Added svg image to the modal and also added more data to it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "Pressable"
+        "bestprice",
+        "gorhom",
+        "Pressable",
+        "svgs"
     ]
 }
