--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "react-native": "0.72.4",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@svgr/cli": "^8.1.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
