--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~49.0.8",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "nativewind": "^2.0.11",
     "npm": "^10.0.0",
     "react": "18.2.0",
@@ -32,7 +33,8 @@
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
