--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "-": "^0.0.1",
     "@gorhom/bottom-sheet": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.8",
@@ -24,8 +25,10 @@
     "react-native": "0.72.5",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
@@ -33,6 +36,7 @@
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-tab-view": "^3.5.2",
     "save": "^2.9.0",
     "yup": "^1.3.2"
   },
