--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "npm": "^10.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-calendars": "^1.1301.0",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.2.0",
