--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "nativewind": "^2.0.11",
-    "npm": "^10.0.0",
     "react": "18.2.0",
+    "react-barcode": "^1.4.6",
     "react-native": "0.72.5",
     "react-native-calendars": "^1.1301.0",
-    "react-native-dropdown-menu": "^2.0.0",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
@@ -35,7 +32,6 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
