--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "save": "^2.9.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
